--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 dj-database-url==0.4.1
 Django==1.9.6
+django-filter==0.13.0
+djangorestframework==3.3.3
 gunicorn==19.6.0
+Markdown==2.6.6
 psycopg2==2.6.1
 whitenoise==3.1
