account view set up react workflow set up with web pack

--- a/static/bower.json
+++ b/static/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "please-wait": "^0.0.5",
-    "SpinKit": "spinkit#^1.2.5"
+    "SpinKit": "spinkit#^1.2.5",
+    "mdi": "^1.6.50"
   }
 }
