--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-dj-database-url==0.4.1
-Django==1.9.6
+dj-database-url==0.4.0
+Django==1.9
 django-filter==0.13.0
-django-js-reverse==0.7.2
+django-js-reverse==0.7.0
 djangorestframework==3.3.3
-gunicorn==19.6.0
-Markdown==2.6.6
+gunicorn==19.4.5
+jsonfield==1.0.3
+Markdown==2.6.5
+numpy==1.11.1
+oauthlib==1.0.3
+pandas==0.18.1
 psycopg2==2.6.1
-requests==2.10.0
-whitenoise==3.1
+PyJWT==1.4.0
+python-dateutil==2.5.3
+python-openid==2.2.5
+python-social-auth==0.2.14
+pytz==2016.6.1
+requests==2.9.1
+requests-oauthlib==0.6.1
+six==1.10.0
+virtualenv==13.1.2
+whitenoise==2.0.6
