--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ python-social-auth==0.2.14
 pytz==2016.6.1
 requests==2.9.1
 requests-oauthlib==0.6.1
+simplejson==3.8.2
 six==1.10.0
 virtualenv==13.1.2
 whitenoise==2.0.6
+yahoo-finance==1.2.1
