--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,17 @@ django-filter==0.13.0
 django-js-reverse==0.7.0
 djangorestframework==3.3.3
 docopt==0.4.0
+funcsigs==1.0.2
 gunicorn==19.4.5
 jsonfield==1.0.3
 kombu==3.0.37
 mandrill==1.0.57
 Markdown==2.6.5
+mock==2.0.0
 numpy==1.11.1
 oauthlib==1.0.3
 pandas==0.18.1
+pbr==1.10.0
 psycopg2==2.6.1
 PyJWT==1.4.0
 python-dateutil==2.5.3
