--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ billiard==3.3.0.23
 celery==3.1.24
 dj-database-url==0.4.0
 Django==1.9
+django-celery==3.1.17
 django-filter==0.13.0
 django-js-reverse==0.7.0
 djangorestframework==3.3.3
