more react stuff

--- a/staticfiles/src/package.json
+++ b/staticfiles/src/package.json
@@ -21,11 +21,14 @@
     "dropify": "^0.2.1",
     "file-loader": "^0.9.0",
     "glob": "^7.0.5",
-    "highcharts": "^4.2.5",
+    "highcharts": "^4.2.7",
+    "highcharts-more": "^0.1.2",
+    "highcharts-solid-gauge": "^0.1.2",
     "jquery-migrate": "^3.0.0",
     "nprogress": "^0.2.0",
     "q": "^1.4.1",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.1.0",
     "react-highcharts": "^9.0.0",
     "superagent": "^2.3.0",
