--- a/staticfiles/src/package.json
+++ b/staticfiles/src/package.json
@@ -31,6 +31,7 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.1.0",
     "react-highcharts": "^9.0.0",
+    "sprintf-js": "^1.0.3",
     "superagent": "^2.3.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
