--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ djangorestframework==3.3.3
 docopt==0.4.0
 drf-extensions==0.3.1
 funcsigs==1.0.2
+gitdb2==2.0.0
+GitPython==2.1.1
 gunicorn==19.4.5
 jsonfield==1.0.3
 kombu==3.0.37
@@ -35,6 +37,7 @@ requests==2.9.1
 requests-oauthlib==0.6.1
 simplejson==3.8.2
 six==1.10.0
+smmap2==2.0.1
 supervisor==3.3.1
 virtualenv==13.1.2
 whitenoise==2.0.6
