--- a/runScripts/celery.conf
+++ b/runScripts/celery.conf
@@ -48,6 +48,14 @@ startsecs=10
 stopwaitsecs=600
 environment=PYTHONPATH='../env'
 
+[program:gunicorn]
+command=service gunicorn start
+user=root
+autostart=true
+autorestart=true
+redirect_stderr=true
+environment=PYTHONPATH='../env'
+
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
