--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ docopt==0.4.0
 drf-extensions==0.3.1
 funcsigs==1.0.2
 gitdb2==2.0.0
-GitPython==2.1.1
 gunicorn==19.4.5
 jsonfield==1.0.3
 kombu==3.0.37
+lxml==3.7.1
 mandrill==1.0.57
 Markdown==2.6.5
 meld3==1.0.2
