--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ anyjson==0.3.3
 billiard==3.3.0.23
 celery==3.1.24
 cvxopt==1.1.8
+diff-match-patch==20121119
 dj-database-url==0.4.0
 Django==1.9
 django-celery==3.1.17
 django-filter==0.13.0
+django-import-export==0.5.1
 django-js-reverse==0.7.2
 djangorestframework==3.3.3
 docopt==0.4.0
@@ -39,6 +41,7 @@ simplejson==3.8.2
 six==1.10.0
 smmap2==2.0.1
 supervisor==3.3.1
+tablib==0.11.3
 virtualenv==13.1.2
 whitenoise==2.0.6
 yahoo-finance==1.2.1
