--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-amqp==1.4.9
+amqp==2.1.4
 anyjson==0.3.3
-billiard==3.3.0.23
-celery==3.1.24
+billiard==3.5.0.2
+celery==4.0.2
 cvxopt==1.1.8
 diff-match-patch==20121119
 dj-database-url==0.4.0
 Django==1.9
+django-celery==3.1.17
 django-filter==0.13.0
 django-import-export==0.5.1
 django-js-reverse==0.7.2
@@ -16,7 +17,7 @@ funcsigs==1.0.2
 gitdb2==2.0.0
 gunicorn==19.4.5
 jsonfield==1.0.3
-kombu==3.0.37
+kombu==4.0.2
 lxml==3.7.1
 mandrill==1.0.57
 Markdown==2.6.5
@@ -41,6 +42,7 @@ six==1.10.0
 smmap2==2.0.1
 supervisor==3.3.1
 tablib==0.11.3
+vine==1.1.3
 virtualenv==13.1.2
 whitenoise==2.0.6
 yahoo-finance==1.2.1
