removed django celery

--- a/.config/vestivise_nightly.conf
+++ b/.config/vestivise_nightly.conf
@@ -1,5 +1,5 @@
 [program:vestivise_nightly]
-command=/home/Vestivise/env/bin/celery -A Vestivise worker -B -l info
+command=/home/Vestivise/env/bin/celery -A Vestivise worker -B -l info -S django
 stdout_logfile=/var/log/supervisor/celery/vestivise_cron_info.log
 stderr_logfile=/var/log/supervisor/celery/vestivise_cron_err.log
 autostart=true
