--- a/staticfiles/bower.json
+++ b/staticfiles/bower.json
@@ -20,6 +20,11 @@
     "SpinKit": "spinkit#^1.2.5",
     "mdi": "^1.6.50",
     "dropify": "^0.2.1",
-    "tether-shepherd": "^1.8.1"
+    "tether-shepherd": "^1.8.1",
+    "selectivizr": "^1.0.2",
+    "html5shiv": "^3.7.3"
+  },
+  "devDependencies": {
+    "html5shiv": "^3.7.3"
   }
 }
