--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ diff-match-patch==20121119
 dj-database-url==0.4.0
 Django==1.9
 django-celery==3.1.17
+django-custom-user==0.7
 django-filter==0.13.0
 django-import-export==0.5.1
 django-js-reverse==0.7.2
@@ -44,5 +45,6 @@ supervisor==3.3.1
 tablib==0.11.3
 vine==1.1.3
 virtualenv==13.1.2
+wheel==0.24.0
 whitenoise==2.0.6
 yahoo-finance==1.2.1
