--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,12 @@ cssutils==0.9.10
 cvxopt==1.1.8
 diff-match-patch==20121119
 dj-database-url==0.4.0
-Django==1.6.11
+Django==1.11a1
 django-bitfield==1.7.1
 django-celery==3.1.17
 django-crispy-forms==1.4.0
 django-custom-user==0.7
 django-debug-toolbar==1.3.2
-django-custom-user==0.7
 django-filter==0.13.0
 django-import-export==0.5.1
 django-js-reverse==0.7.2
@@ -27,7 +26,7 @@ django-jsonfield==0.9.13
 django-picklefield==0.3.2
 django-sudo==2.1.0
 django-templatetag-sugar==1.0
-djangorestframework==2.3.14
+djangorestframework==3.5.4
 docopt==0.4.0
 docutils==0.13.1
 drf-extensions==0.3.1
@@ -47,6 +46,7 @@ jmespath==0.9.1
 jsonfield==1.0.3
 kombu==3.0.35
 libsourcemap==0.5.0
+loggly-python-handler==1.0.0
 lxml==3.7.1
 mandrill==1.0.57
 Markdown==2.6.5
@@ -85,6 +85,7 @@ raven==5.32.0
 rb==1.6
 redis==2.10.5
 requests==2.9.1
+requests-futures==0.9.7
 requests-oauthlib==0.6.1
 s3transfer==0.1.10
 selenium==3.0.0b3
@@ -106,6 +107,5 @@ urllib3==1.16
 uWSGI==2.0.14
 vine==1.1.3
 virtualenv==13.1.2
-wheel==0.24.0
 whitenoise==2.0.6
 yahoo-finance==1.2.1
